Update template to use myacme resolver and improve README
- Change certResolver from letsencrypt to myacme in dynamic.yml.template
- Update README SSL description to be more generic
- Improve ACME CA server example documentation

--- a/config/dynamic.yml.template
+++ b/config/dynamic.yml.template
@@ -8,7 +8,7 @@ http:
       middlewares:
         - jwt-auth
       tls:
-        certResolver: letsencrypt
+        certResolver: myacme
     
     # Admin service route based on JWT role claim
     httpbin-admin:
@@ -20,7 +20,7 @@ http:
         - jwt-auth
         - admin-rewrite
       tls:
-        certResolver: letsencrypt
+        certResolver: myacme
 
   middlewares:
     jwt-auth:
